translations_exported/de/docs_exported/1.17/crafttweaker/docs/vanilla/api/BracketDumpers.md
# BracketDumpers

## Diese Klasse importieren

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.BracketDumpers;
```


## Static Methods

:::group{name=getAttributeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getAttributeDump() as Collection<string>

BracketDumpers.getAttributeDump();
```

:::

:::group{name=getBlockDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getBlockDump() as Collection<string>

BracketDumpers.getBlockDump();
```

:::

:::group{name=getBlockMaterialDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getBlockMaterialDump() as Collection<string>

BracketDumpers.getBlockMaterialDump();
```

:::

:::group{name=getConstantDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getConstantDump() as Collection<string>

BracketDumpers.getConstantDump();
```

:::

:::group{name=getDamageSourceDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getDamageSourceDump() as Collection<string>

BracketDumpers.getDamageSourceDump();
```

:::

:::group{name=getEffectDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getEffectDump() as Collection<string>

BracketDumpers.getEffectDump();
```

:::

:::group{name=getEnchantmentDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getEnchantmentDump() as Collection<string>

BracketDumpers.getEnchantmentDump();
```

:::

:::group{name=getEntityTypeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getEntityTypeDump() as Collection<string>

BracketDumpers.getEntityTypeDump();
```

:::

:::group{name=getItemBracketDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getItemBracketDump() as Collection<string>

BracketDumpers.getItemBracketDump();
```

:::

:::group{name=getItemGroupBracketDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getItemGroupBracketDump() as Collection<string>

BracketDumpers.getItemGroupBracketDump();
```

:::

:::group{name=getPotionTypeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getPotionTypeDump() as Collection<string>

BracketDumpers.getPotionTypeDump();
```

:::

:::group{name=getProfessionDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getProfessionDump() as Collection<string>

BracketDumpers.getProfessionDump();
```

:::

:::group{name=getRecipeTypeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getRecipeTypeDump() as Collection<string>

BracketDumpers.getRecipeTypeDump();
```

:::

:::group{name=getTagDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getTagDump() as Collection<string>

BracketDumpers.getTagDump();
```

:::

